--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.2",
+    "@mui/x-date-pickers": "^6.18.6",
+    "dayjs": "^1.11.10",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
-    "react-dom": "^18",
-    "resend": "^2.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
